welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:4: error: not found: value estFaceMUr
if (estFaceMUr==true){
    ^