welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
gauche()
gauche()
if (estFaceMUr==true){
	droite()
	avance()
	gauche()
	avance()
} else {
	while (estFaceMur==false){
	while (estSurBiscuit()==false ){
		avance()
	}
	while(estSurBiscuit()==true){
		prendBiscuit()
		recule()
	}
	while (estSurBiscuit()==false){
	recule()
	}
avance()
poseBiscuit()
    while (estSurBiscuit()==true){
		avance()
    }
}
}


